--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ header{
 }
 main{
     width: 100vw;
-    height: calc(var(--vh, 1vh) * 75);
+    min-height: calc(var(--vh, 1vh) * 75);
     background-color: rgb(40, 40, 40);
 }
 .chat-container{
