--- a/testing.html
+++ b/testing.html
@@ -14,7 +14,7 @@ header{
     /* height: 10vh; */
     height: calc(var(--vh, 1vh) * 10);
     background-color: black;
-    position: sticky;
+    position: fixed;
     top: 0;
     display: flex;
     align-items: center;
@@ -60,7 +60,7 @@ footer{
     width: 100vw;
     height: calc(var(--vh, 1vh) * 15);
     background-color: rgb(40, 40, 40);
-    position: sticky;
+    position: fixed;
     bottom: 0;
 }
 .text-container{
