--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@ body{
 header{
     width: 100vw;
     height: 3.5rem;
-    /*height: calc(var(--vh, 1vh) * 10);*/
     background-color: #1a1d23;
     position: sticky;
     top: 0;
@@ -52,7 +51,7 @@ main{
 }
 .chat-container{
     box-sizing: border-box;
-    padding: 5% 0%;
+    padding: 1.5rem 1rem;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -60,7 +59,6 @@ main{
 }
 .chats{
     box-sizing: border-box;
-    margin: 0% 5%;
     padding: 0.25rem;
     width: auto;
     max-width: 70%;
