--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@ header{
 .user-select{
     width: 60%;
     height: 80%;
-    background-color: gray;
+
     border-radius: 1.5rem;
+    box-sizing: border-box;
+    border: 1px solid white;
 }
 .pointer{
     width: 50%;
@@ -41,6 +43,7 @@ header{
     align-items: center;
     font-size: 2rem;
     background-color: black;
+    box-sizing: border-box;
     border-radius: 1rem;
     border: 1px solid white;
 }
