--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@ input{
     all: unset;
     width: 0.01%;
     height: 0.01%;
-    color: black;
-    background-color:blue;
+    color: #1a1d23;
+    background-color:transparent;
+    caret-color: transparent;
 }
         </style>
     </head>
