--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body{
 header{
     width: 100vw;
     height: 3.5rem;
-    background-color: #1a1d23;
+    background-color: black;
     position: sticky;
     top: 0;
     display: flex;
@@ -23,7 +23,6 @@ header{
 .user-select{
     width: 60%;
     height: 80%;
-
     border-radius: 1.5rem;
     box-sizing: border-box;
     border: 1px solid white;
@@ -76,7 +75,7 @@ input{
     all: unset;
     width: 0.01%;
     height: 0.01%;
-    color: #1a1d23;
+    color: #22272e;
     background-color:transparent;
     caret-color: transparent;
 }
